--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,7 @@
         <nav>
             <div>
                 <div id="Nav-A"><a href="index.html">Main Page</a></div>
-                <div id="Nav-B"><a href="exhibition.html">Our Exhibition</a></div>
+                <div id="Nav-B"><a href="our-exhibition.html">Our Exhibition</a></div>
                 <div id="Nav-C"><a href="about-us.html">About Us</a></div>
             </div>
         </nav>
