--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <article>
             <h2>Main Page</h2>
             <p class="text-align-center">Welcome to our piano exhibition. <a href="our-exhibition.html">Here</a>, we will show you the seven most expensive pianos in the world.</p>
-            <br><p id="Third-article">Maybe, we can call these <a href="our.exhibition.html">the seven wonders</a> of the world!</p>
+            <br><p id="Third-article">Maybe, we can call these <a href="our-exhibition.html">the seven wonders</a> of the world!</p>
 
             <p class="text-align-center" id="Fun">Fun Facts:</p>
             <ul class="l-center none">
