PianoMuseum img problem fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </article>
         <!-- Articles - End -->
-        <img id="Main-image" src="img/Most Expensive Pianos.jpg" alt="Most Expensive Piano Keys Photo">
+        <img id="Main-image" src="assets/most-expensive-pianos.png" alt="Most Expensive Piano Keys Photo">
     </section>
     <!-- Content - End -->
 </body>
