PianoMuseum img problem fixed 2

--- a/our-exhibition.html
+++ b/our-exhibition.html
@@ -31,28 +31,28 @@
                 <li>
                     The 'As Time Goes By' Piano from the movie of Casablanca(1942)
                     <br>
-                    <img src="img/The 'As Time Goes By' Piano.jpg"alt="The 'As Time Goes By' Piano Photo">
+                    <img src="assets/AsTimeGoesByPiano.png"alt="The 'As Time Goes By' Piano Photo">
                     <p class="bold">Price: $3,400,000</p>
                 </li>
                 <br>
                 <li>
                     Heintzman Crystal Piano
                     <br>
-                    <img src="img/Heintzman Crystal Piano.jpg"alt="Heintzman Crystal Piano Photo">
+                    <img src="assets/HeintzmanCrystalPiano.jpg"alt="Heintzman Crystal Piano Photo">
                     <p class="bold">Price: $3,220,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway & Sons 'Pictures at an Exhibition' Piano
                     <br>
-                    <img src="img/Steinway & Sons 'Pictures at an Exhibition' Piano.jpg"alt="Steinway & Sons 'Pictures at an Exhibition' Piano Photo"> 
+                    <img src="assets/PicturesAtAnExhibitionPiano.jpg"alt="Steinway & Sons 'Pictures at an Exhibition' Piano Photo"> 
                     <p class="bold">Price: $2,500,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway & Sons Fibonacci Piano
                     <br>
-                    <img src="img/Steinway & Sons Fibonacci Piano.jpeg"alt="Steinway & Sons Fibonacci Piano Photo"> 
+                    <img src="assets/Steinway&SonsFibonacciPiano.jpg"alt="Steinway & Sons Fibonacci Piano Photo"> 
                     <p class="bold">Price: $2,400,000</p>
                 </li>
                 <br>
