PianoMuseum img problem fixed 3

--- a/our-exhibition.html
+++ b/our-exhibition.html
@@ -31,49 +31,49 @@
                 <li>
                     The 'As Time Goes By' Piano from the movie of Casablanca(1942)
                     <br>
-                    <img src="assets/AsTimeGoesByPiano.png"alt="The 'As Time Goes By' Piano Photo">
+                    <img src="assets/AsTimeGoesByPiano.png" alt="The 'As Time Goes By' Piano Photo">
                     <p class="bold">Price: $3,400,000</p>
                 </li>
                 <br>
                 <li>
                     Heintzman Crystal Piano
                     <br>
-                    <img src="assets/HeintzmanCrystalPiano.jpg"alt="Heintzman Crystal Piano Photo">
+                    <img src="assets/HeintzmanCrystalPiano.jpg" alt="Heintzman Crystal Piano Photo">
                     <p class="bold">Price: $3,220,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway & Sons 'Pictures at an Exhibition' Piano
                     <br>
-                    <img src="assets/PicturesAtAnExhibitionPiano.jpg"alt="Steinway & Sons 'Pictures at an Exhibition' Piano Photo"> 
+                    <img src="assets/PicturesAtAnExhibitionPiano.jpg" alt="Steinway & Sons 'Pictures at an Exhibition' Piano Photo"> 
                     <p class="bold">Price: $2,500,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway & Sons Fibonacci Piano
                     <br>
-                    <img src="assets/Steinway&SonsFibonacciPiano.jpg"alt="Steinway & Sons Fibonacci Piano Photo"> 
+                    <img src="assets/Steinway&SonsFibonacciPiano.jpg" alt="Steinway & Sons Fibonacci Piano Photo"> 
                     <p class="bold">Price: $2,400,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway Model Z Belonging to John Lennon Piano
                     <br>
-                    <img src="img/Steinway Model Z Belonging to John Lennon Piano.jpg"alt="Steinway Model Z Belonging to John Lennon Piano Photo">
+                    <img src="assets/JohnLennonPiano.jpg" alt="Steinway Model Z Belonging to John Lennon Piano Photo">
                     <p class="bold">Price: $2,370,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway & Sons Red Pops for (RED) Parlor Grand Piano
                     <br>
-                    <img src="img/Steinway & Sons Red Pops for (RED) Parlor Grand Piano.jpg"alt="Steinway & Sons Red Pops for (RED) Parlor Grand Piano Photo">
+                    <img src="assets/ParlorGrandPiano.jpg" alt="Steinway & Sons Red Pops for (RED) Parlor Grand Piano Photo">
                     <p class="bold">Price: $1,925,000</p>
                 </li>
                 <br>
                 <li>
                     Steinway & Sons Sound of Harmony Concert Grand Piano
                     <br>
-                    <img src="img/Steinway & Sons Sound of Harmony Concert Grand Piano.jpg"alt="Steinway & Sons Sound of Harmony Concert Grand Piano Photo">
+                    <img src="assets/HarmonyConcertGrandPiano.png" alt="Steinway & Sons Sound of Harmony Concert Grand Piano Photo">
                     <p class="bold">Price: $1,630,000</p>
                 </li>
             </ol>
